--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -257,6 +257,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    classpath 'com.android.tools.build:gradle:7.3.3'
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
